# dala_runtime

./: .gitignore  Cargo.toml  LICENSE  README.md  set-theory type system.md  suggestion for implement.md
.github/workflows/: ci.yml
dala_aot/: Cargo.toml
dala_aot/src/: cli.rs  edge_case_tests.rs  main.rs  pipeline.rs
dala_beam_loader/: Cargo.toml
dala_beam_loader/src/: bytecode.rs  chunk.rs  edge_case_tests.rs  error.rs  lib.rs  reader.rs
dala_codegen/: Cargo.toml
dala_codegen/src/: compiler.rs  edge_case_tests.rs  interpreter.rs  intrinsics.rs  lib.rs  runtime_glue.rs  stack_map.rs  trap_sink.rs
dala_dispatch/: Cargo.toml
dala_dispatch/src/: edge_case_tests.rs  export_table.rs  hot_code.rs  lib.rs
dala_ir/: Cargo.toml
dala_ir/src/: builder.rs  constant.rs  edge_case_tests.rs  function.rs  instruction.rs  layout.rs  lib.rs  module.rs  type_system.rs  type_system_profiling.rs  type_system_tests.rs  value.rs
dala_ir/src/opt/: const_prop.rs  cse.rs  dce.rs  escape_analysis.rs  mod.rs  native_specialize.rs  pattern_match.rs  simplify_cfg.rs  speculative.rs  tail_call.rs  type_inference.rs  validation.rs
dala_runtime/: Cargo.toml
dala_runtime/src/: atom.rs  atom_edge_tests.rs  bif.rs  bif_edge_tests.rs  code.rs  code_edge_tests.rs  exception.rs  exception_edge_tests.rs  gc_edge_tests.rs  lib.rs  mailbox.rs  mailbox_edge_tests.rs  memory_edge_tests.rs  port.rs  process.rs  process_edge_tests.rs  scheduler.rs  scheduler_edge_tests.rs  term.rs  term_edge_tests.rs  trap.rs
dala_runtime/src/ai/: inference.rs  mod.rs  model.rs  pipeline.rs  tensor.rs
dala_runtime/src/gc/: copy.rs  header.rs  mod.rs  rootset.rs  sweep.rs
dala_runtime/src/memory/: arena.rs  mod.rs  regions.rs
docs/: GC Requirements & Plan.md  README.md  architecture.md  architecture_suggest.md  dala_aot.md  dala_beam_loader.md  dala_codegen.md  dala_dispatch.md  dala_ir.md  dala_runtime.md  getting-started.md  reference.md  set-theory type system.md  type-system-internals.md
tests/: factorial.erl  fibonacci.erl  gen_server_example.erl  run_tests.sh
