[package]
name = "dala_codegen"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
dala_ir = { path = "../dala_ir" }
dala_runtime = { path = "../dala_runtime" }
cranelift = "0.113"
cranelift-module = "0.113"
cranelift-frontend = "0.113"
cranelift-native = { version = "0.113", optional = true }
cranelift-jit = { version = "0.113", optional = true }
target-lexicon = "0.13"
log = "0.4"
thiserror = "2"
anyhow = "1"
indexmap = "2"
smallvec = "1"
bitflags = "2"

[features]
default = ["jit"]
jit = ["dep:cranelift-jit", "dep:cranelift-native"]
aot = ["dep:cranelift-native"]
