[package]
name = "dala_runtime"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
log = "0.4"
parking_lot = "0.12"
crossbeam = "0.8"
bitflags = "2"
thiserror = "2"
anyhow = "1"
smallvec = "1"
indexmap = "2"
uuid = { version = "1", features = ["v4"] }
memoffset = "0.9"
num-bigint = { version = "0.4", features = ["serde"] }
cfg-if = "1"
num_cpus = "1"
dashmap = "5"

[features]
default = ["smp"]
smp = []
debug-alloc = []
